[metadata]
name = hz
version = 0.0.6
url = https://github.com/t-c-w/hz
platforms = any
description_file = README.md
description = A collection of functions to generate synthetic data from real labeled data itself.
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = hz

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

